# twitter-analysis

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/hooks/: causal-check.sh
analysis/: bookmarks-report.md  ground_truth.json
piles/: ledger.jsonl  tally.py
scripts/: authorize.py
skills/: antithesis-principle.skill  bias-to-impact.skill  correction-to-skill.skill  eval_skill.py  market-vs-leader-attribution.skill  ownership-over-accountability.skill  product-vs-distribution-diagnosis.skill  reverse-engineer-greatness.skill  segment-dont-average.skill  spine-first-writing.md  team-first-ai-adoption.skill
skills/antithesis-principle/: SKILL.md
skills/antithesis-principle/evals/: evals.json
skills/benchmarks-measure-framed-work/: README.md  SKILL.md
skills/bias-to-impact/: SKILL.md
skills/correction-to-skill/: SKILL.md
skills/decouple-from-the-ask/: README.md  SKILL.md
skills/devils-advocate-against-your-own-agent/: README.md  SKILL.md
skills/evals/: example.jsonl
skills/every-agent-needs-a-human/: README.md  SKILL.md
skills/market-vs-leader-attribution/: SKILL.md
skills/ownership-over-accountability/: SKILL.md
skills/product-vs-distribution-diagnosis/: SKILL.md
skills/reverse-engineer-greatness/: SKILL.md
skills/segment-dont-average/: SKILL.md
skills/spine-first-writing/: SKILL.md
skills/team-first-ai-adoption/: SKILL.md
src/twitter_analysis/: analyze.py  auth.py  categorize.py  fetch.py  main.py  render.py  state.py  threads.py
(+18 files in other folders)
